# Student-Score-Prediction

./: Makefile  README.md  pyproject.toml  requirements.txt
student_score_prediction/: __init__.py  dataset.py  features.py  plots.py
student_score_prediction/modeling/: predict.py  train.py
