[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "student_score_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "atlas" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.14.2"


[tool.ruff]
line-length = 99
src = ["student_score_prediction"]
include = ["pyproject.toml", "student_score_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["student_score_prediction"]
force-sort-within-sections = true

